# CENG469---HW1

./: BezierCurveGenerator.cpp  BezierCurveGenerator.h  BezierMeshGenerator.cpp  BezierMeshGenerator.h  CMakeLists.txt  Makefile  PlaneMeshGenerator.cpp  PlaneMeshGenerator.h  README.md  frag2.glsl  main  main.cpp  plotBezier.m  vert.glsl  vert2.glsl
bezier-surface/: bern.m  bezierHalfConvex.m  bezierScript.m  bezierSurface.m  octave-workspace  printBezierPoints.m  rotateBezier.m  translateBezier.m
